[gd_scene load_steps=4 format=2]

[ext_resource path="res://VendingMachine.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1.19173, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 22.2733, 45.06 )

[node name="VendingMachine" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="ColorRect" parent="."]
margin_left = -21.0
margin_top = -46.0
margin_right = 23.0
margin_bottom = 43.0

[node name="CoinSlot" type="Area2D" parent="."]

[node name="Collider" type="CollisionShape2D" parent="CoinSlot"]
position = Vector2( -20.5546, -0.790558 )
shape = SubResource( 1 )

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2( 1.05408, -1.84464 )
shape = SubResource( 2 )

[node name="KeySpawn" type="Position2D" parent="."]
position = Vector2( 0, 30.5683 )

[connection signal="body_entered" from="." to="." method="_on_VendingMachine_body_entered"]
[connection signal="body_entered" from="CoinSlot" to="." method="_on_CoinSlot_body_entered"]
